# starty

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.githooks/: pre-commit
.github/actions/install-linux-deps/: action.yml
.github/workflows/: build_and_test.yml
benchmarks/: Catch2Main.cpp
source/: PluginProcessor.cpp  PluginProcessor.h
source/dsp/: PluginProcessor.cpp  PluginProcessor.h
source/ui/: PluginEditor.cpp  PluginEditor.h
source/util/: RealtimeAttributes.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
